[package]
name = "tag-frontend-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", tag = "0.12.1" }
tag_fs = { git = "https://github.com/kay-gg/tagging_fs" }
serde = {version = "1.0.200", features = ["derive"]}
serde_json = "1.0.116"